# chessgame

./: .gitignore  Cargo.toml  README.md
.claude/: launch.json
.claude/skills/guide-front-test-md/: SKILL.md
.claude/skills/guide-integration-test-rust-md/: SKILL.md
.claude/skills/implement-code/: SKILL.md
.claude/skills/implement-proof-logs/: SKILL.md
.claude/skills/query-specs/: SKILL.md
_ai/features/F0001-start-a-game/: F0001.md  IT-F0001.md  unit_test_F0001.md
_ai/features/F0002-move-a-piece/: F0002.md  IT-F0002.md  retro-F0002.md  unit_test_F0002.md
_ai/features/F0003-play-with-stockfish/: F0003.md  IT-F0003.md  unit_test_F0003.md
_ai/features/F0004-white-pawn-promotion/: F0004.md  IT-F0004.md
_ai/global/: architecture.md  coding-rules.md  proof-line-matching.md  proof-logs.md
api-tests/: Cargo.toml
api-tests/src/: lib.rs
api-tests/tests/: integration_test_F0001.rs  integration_test_F0002.rs  integration_test_F0003.rs  integration_test_F0004.rs
chessgame/: index.html  package-lock.json  package.json
chessgame/src/: main.ts  style.css
chessgame/src/domain/: overview.ts  pieces.ts
chessgame/src/events/: applyOpponentMove.ts  applyValidMove.ts  logPanel.ts  onPageLoad.ts  playOpponent.ts  rejectMove.ts  renderBoard.ts  selection.ts
chessgame/src/infra/: movePiece.ts  opponentMove.ts  startGame.ts
fisher-server/: Cargo.toml
fisher-server/src/: lib.rs  main.rs  proof_log.rs
fisher-server/src/engine/: mod.rs
fisher-server/src/game/: mod.rs  overview.rs  piece.rs  square.rs
fisher-server/src/moves/: mod.rs
(+3 files in other folders)
